# klyx

./: .gitignore  .gitmodules  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build-and-install.sh  build.gradle.kts  build.sh  gradle.properties  package-lock.json  package.json  settings.gradle.kts
androidApp/: build.gradle.kts  (+1 more)
app/: .gitignore  CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: klyx-release-v1.3.0-alpha.0.dm
app/release/baselineProfiles/1/: klyx-release-v1.3.0-alpha.0.dm
app/schemas/com.klyx.data.database.KlyxDatabase/: 2.json
app/src/androidTest/java/com/klyx/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/klyx/system/: CommandInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.java  test.kt
app/src/main/assets/extensions/default-themes/: extension.toml
app/src/main/assets/extensions/theme_extension/themes/: themes.json
app/src/main/assets/terminal/: init.sh  sandbox.sh  setup.sh  universal_runner.sh  utils.sh
app/src/main/assets/textmate/grammers/: grammers.json  json5.json  txt.json
app/src/main/assets/textmate/grammers/json/: language-configuration.json
app/src/main/assets/textmate/grammers/kotlin/: kotlin.json  language-configuration.json
app/src/main/assets/textmate/themes/: catppuccin-frappe.json  catppuccin-macchiato.json  darcula.json  one-dark-pro.json  one-light.json
app/src/main/assets/treesitter/queries/c/: folds.scm  highlights.scm  locals.scm
app/src/main/assets/treesitter/queries/cpp/: folds.scm  highlights.scm  locals.scm
app/src/main/assets/treesitter/queries/ecma/: injections.scm
app/src/main/assets/treesitter/queries/html/: injections.scm
app/src/main/assets/treesitter/queries/html_tags/: injections.scm
app/src/main/assets/treesitter/queries/java/: folds.scm  locals.scm
app/src/main/assets/treesitter/queries/kotlin/: folds.scm  injections.scm  locals.scm
app/src/main/assets/treesitter/queries/python/: folds.scm  indents.scm  locals.scm
app/src/main/assets/treesitter/queries/rust/: folds.scm  indents.scm  locals.scm
app/src/main/assets/treesitter/queries/typescript/: highlights.scm  indents.scm  injections.scm  locals.scm
app/src/main/assets/wasm/: my_extension.wasm  wasm_add.wasm
app/src/main/assets/wasm/my_extension/: extension.toml  my_extension.wasm
app/src/main/cpp/: os.c
app/src/main/cpp/talloc-minimal/: talloc.c  talloc.h
app/src/main/java/com/klyx/: Klyx.kt  KlyxApplication.kt  MainActivity.kt  Test.kt  TestActivity.kt  Wasm.kt
app/src/main/java/com/klyx/core/: BuildVariant.kt  app.kt  font.kt
app/src/main/java/com/klyx/core/compose/: CompositionLocal.kt  ProvideCompositionLocals.kt
app/src/main/java/com/klyx/core/key/: KeyShortcut.kt  TextInputModifier.kt
app/src/main/java/com/klyx/data/database/: KlyxDatabase.kt  Migrations.kt  RecentFileDao.kt  RecentFileEntity.kt  RecentProjectDao.kt  RecentProjectEntity.kt
app/src/main/java/com/klyx/data/diagnostics/: Capabilities.kt
app/src/main/java/com/klyx/data/editor/: CodeEditorStateExt.kt  EditorAction.kt  EditorStateRegistry.kt  WorkspaceTab.kt  colorScheme.kt
app/src/main/java/com/klyx/data/file/: FileRepository.kt  FileStatInfo.kt  KxFile.kt  KxFileExt.kt
app/src/main/java/com/klyx/di/: AppModule.kt
app/src/main/java/com/klyx/editor/: Editor.kt  language.kt
app/src/main/java/com/klyx/event/: GlobalEventBus.kt  UiEvent.kt
app/src/main/java/com/klyx/extension/: ExtensionFilter.kt
app/src/main/java/com/klyx/icons/: Klyx.kt  KlyxIcons.kt  KlyxOutlined.kt
app/src/main/java/com/klyx/language/: LanguageRegistryImpl.kt
app/src/main/java/com/klyx/lsp/: KlyxLspClient.kt  LspCompletionItem.kt  LspLanguage.kt  LspManager.kt  createInitializeParams.kt
app/src/main/java/com/klyx/native/: Os.kt
app/src/main/java/com/klyx/network/: httpClient.kt
app/src/main/java/com/klyx/platform/: Architecture.kt
app/src/main/java/com/klyx/plugin/: AppPluginContext.kt  LanguageServerRegistryImpl.kt  PluginManager.kt  PluginRuntime.kt  PluginViewModel.kt
app/src/main/java/com/klyx/service/: LoggerImpl.kt  ServiceWrappers.kt
app/src/main/java/com/klyx/system/: Command.kt  Process.kt  Streaming.kt
app/src/main/java/com/klyx/terminal/: BootstrapUpdateChecker.kt  TerminalDocumentsProvider.kt  TerminalFiles.kt  TerminalInstaller.kt  TerminalPaths.kt  process.kt
app/src/main/java/com/klyx/ui/: ComposeActivity.kt  ImmersiveModeHandler.kt
app/src/main/java/com/klyx/util/: ContextUtils.kt  DateTime.kt  FileUtils.kt  Koin.kt  ModifierExt.kt  UriUtils.kt  Utils.kt  ViewModelExt.kt
app/src/main/java/com/klyx/viewmodel/: EditorViewModel.kt
app/src/main/res/drawable/: admin_panel_settings_24px.xml  archive_24px.xml  code_json.xml  docs_24px.xml  github.xml  ic_launcher_monochrome.xml  keyboard_off_24px.xml  language_c.xml  language_cpp.xml  language_css3.xml  language_go.xml  language_html5.xml  language_java.xml  language_kotlin.xml  language_lua.xml  language_markdown_outline.xml  language_php.xml  language_python.xml  language_rust.xml  language_swift.xml  lock_person_24px.xml  pdf_box.xml  telegram.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/klyx/: ExampleUnitTest.kt
app/src/test/java/com/klyx/plugin/: PluginLifecycleTest.kt
app/src/test/java/com/klyx/system/: CommandStreamingTest.kt  CommandTest.kt
crates/extension_api/: Cargo.toml
feature/extension/: Cargo.toml  build.gradle.kts  build.rs
feature/extension/src/commonMain/rust/: capability_granter.rs  extension.rs  extension_builder.rs  github.rs  http_client.rs  lib.rs  paths.rs  rel_path.rs  types.rs  wasm_host.rs
feature/extension/src/commonMain/rust/types/: lsp.rs
feature/extension/src/commonMain/rust/wasm_host/: wit.rs
feature/extension/src/commonMain/rust/wasm_host/wit/: since_v1_3_6.rs
feature/terminal/android/src/main/cpp/: CMakeLists.txt
feature/terminal/emulator/src/nativeInterop/cpp/: CMakeLists.txt  terminal.c  terminal_jni.c
(+2440 files in other folders)
