[workspace]
members = [
    "feature/extension",
    "crates/extension_api",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
uniffi = "0.29.4"
semver = "1.0.27"
futures = "0.3"
tokio = { version = "1.49.0", features = ["fs"] }
once_cell = "1.21.3"
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
