[package]
name = "klyx-extension"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
anyhow.workspace = true
uniffi.workspace = true
semver.workspace = true
tokio.workspace = true
once_cell.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
async-fs = "2.2.0"
futures-util = "0.3"
wasm-encoder = "0.243.0"
wasmparser = "0.243.0"
wasmtime = { version = "33", default-features = false, features = [
    "async",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "33"
moka = { version = "0.12.12", features = ["sync"] }
zip = "7.0.0"
